flat sort for get posts
