# docs/swagger.yaml
@@ -580,6 +580,53 @@ paths:
       summary: Updates thread info
       tags:
       - Thread
+  /thread/{slug_or_id}/posts:
+    get:
+      consumes:
+      - application/json
+      description: GetThreadPosts
+      operationId: GetThreadPosts
+      parameters:
+      - description: slug or id of thread
+        in: path
+        name: slug_or_id
+        required: true
+        type: string
+      - description: limit
+        in: query
+        name: limit
+        type: string
+      - description: since
+        in: query
+        name: since
+        type: string
+      - description: sort
+        in: query
+        name: sort
+        type: string
+      - description: desc
+        in: query
+        name: desc
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Threads'
+        "404":
+          description: Not found - Requested entity is not found in database
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error - Request is valid but operation failed
+            at server side
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: GetThreadPosts
+      tags:
+      - Thread
   /thread/{slug_or_id}/vote:
     post:
       consumes:
