# repository/threadFuncsStore.go
@@ -83,8 +83,6 @@ func (s *Store) UpdateThreadInfo(in *model.ThreadUpdate) error {
 
 func (s *Store) VoteForThread(in *model.Vote, threadID int) (int, error) {
 	count := 0
-	//nameArr := make([]string, 0)
-	//nameArr = append(nameArr, in.Nickname)
 	err := s.db.QueryRow(context.Background(), `SELECT count(*) FROM (SELECT users.nickname FROM users JOIN votes on users.nickname=votes.nickname JOIN threads ON votes.thread=threads.id WHERE threads.id = $1) AS S WHERE S.nickname IN ($2);`, threadID, in.Nickname).Scan(&count)
 	if err != nil {
 		return 0, err
@@ -110,4 +108,32 @@ func (s *Store) VoteForThread(in *model.Vote, threadID int) (int, error) {
 		return 0, err
 	}
 	return newRate, nil
+}
+
+func (s *Store) GetThreadPosts(threadId int, limit int, since int, sort string, desc bool) ([]*model.Post, error) {
+	posts := []*model.Post{}
+
+	rows, err := s.db.Query(context.Background(), `SELECT posts.id, parent, posts.author, posts.message, posts.forum, posts.thread, isedited, posts.created FROM posts JOIN threads ON posts.thread = threads.id WHERE threads.id = $1 AND posts.id > $2 ORDER BY posts.created LIMIT $3;`, threadId, since, limit)
+	if err != nil {
+		return nil, err
+	}
+	if desc {
+		if since == 0 {
+			since = 1e9
+		}
+		rows, err = s.db.Query(context.Background(), `SELECT posts.id, parent, posts.author, posts.message, posts.forum, posts.thread, isedited, posts.created FROM posts JOIN threads ON posts.thread = threads.id WHERE threads.id = $1 AND posts.id < $2 ORDER BY posts.created DESC LIMIT $3;`, threadId, since, limit)
+	}
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	for rows.Next() {
+		dat := model.Post{}
+		err := rows.Scan(&dat.Id, &dat.Parent, &dat.Author, &dat.Message, &dat.Forum, &dat.Thread, &dat.IsEdited, &dat.Created)
+		if err != nil {
+			return nil, err
+		}
+		posts = append(posts, &dat)
+	}
+	return posts, nil
 }
